resezed modal boxes on Administracija pitanja i testova,in main.js variable  currentQuestionId setted to null after closing modal, fixed contet wraper size to previous one

--- a/questionModification.css
+++ b/questionModification.css
@@ -1,8 +1,11 @@
+h3{
+    margin-bottom: 5px;
+}
 /* Table and input boxes */
 table, th, td, tr{
     padding: 10px;
     margin-top: 50px;
-    width: 100%;
+    width:200px;
     table-layout: fixed;
     border-collapse: collapse;
     border: 2px solid black;
@@ -16,7 +19,7 @@ th, tr, td{
     width: 180px;
     border: 1px solid;
     border-radius: 4px;
-    outline: none;
+  
 }
 .correct-box{
     position: relative;
@@ -77,10 +80,10 @@ th, tr, td{
 }
 .createQuestion{
     background-color: #fefefe;
-    margin: auto;
+    margin:auto;
     padding: 15px;
     border: 1px solid #888;
-    width: 55%;
+    width: 45%;
 }
 .close {
     color: #aaa;
