--- a/testModification.css
+++ b/testModification.css
@@ -1,8 +1,11 @@
+h3{
+    margin-bottom:5px;
+}
 /* Tables */
 table, th, td, tr{
     padding: 10px;
     margin-top: 50px;
-    width: 100%;
+    width:200px;
     table-layout: fixed;
     border-collapse: collapse;
     border: 2px solid black;
@@ -33,7 +36,7 @@ th, tr, td{
     margin: 15% auto;
     padding: 20px;
     border: 1px solid #888;
-    width: 55%;
+    width: 45%;
 }
 .closeModal{
     color: #aaa;
@@ -69,8 +72,8 @@ th, tr, td{
     background-color: #1e99ff;
     border-radius: 8px;
     outline: none;
-    padding: 8px;
-    font-size: 17px;
+    padding: 10px;
+    font-size: 12px;
 }
 .saveTestBtn:hover{
     background-color: white;
@@ -83,11 +86,10 @@ th, tr, td{
 
 .addQuestionInTbl{
     background-color: lightgreen;
-    margin-left: 2px;
-    padding: 5px;
     border-radius: 8px;
-    font-size: 17px;
     outline: none;
+    padding: 8px;
+    font-size: 12px;
 }
 .addQuestionInTbl:hover{
     background-color: white;
